# HSE-project-image-processor

./: CMakeLists.txt  README.md  README_ru.md  constants.h  image_processor.cpp
filters/: filter_apply.cpp  filters.cpp  filters.h
objects/Image/: image.cpp  image.h
objects/pixel/: pixel.cpp  pixel.h
parser/: arg_parser.cpp  arg_parser.h
reader/: reader.cpp  reader.h
writer/: writer.cpp  writer.h
